2010-07-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Don't assert when clicking on a plug-in in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=42762

        Add stub for PluginView::handleEvent.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::handleEvent):
        * WebProcess/Plugins/PluginView.h:

2010-07-21  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson.

        Get accelerated compositing working with webkit2
        https://bugs.webkit.org/show_bug.cgi?id=41084
        
        Hook up dynamic DrawingArea switching, so that when the WebProcess hits a page
        that requires accelerated compositing, we switch to the LayerBackedDrawingArea.
        
        * Shared/CoreIPCSupport/DrawingAreaProxyMessageKinds.h:
        (DrawingAreaProxyMessage::):
        * Shared/CoreIPCSupport/WebPageProxyMessageKinds.h:
        (WebPageProxyMessage::):
        * UIProcess/API/mac/PageClientImpl.h:
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::pageDidEnterAcceleratedCompositing):
        (WebKit::PageClientImpl::pageDidLeaveAcceleratedCompositing):
        * UIProcess/API/mac/WKView.mm:
        (-[WKView _startAcceleratedCompositing:]):
        (-[WKView _switchToDrawingAreaTypeIfNecessary:DrawingAreaProxy::]):
        (-[WKView _pageDidEnterAcceleratedCompositing]):
        (-[WKView _pageDidLeaveAcceleratedCompositing]):
        * UIProcess/API/mac/WKViewInternal.h:
        * UIProcess/ChunkedUpdateDrawingAreaProxy.cpp:
        (WebKit::ChunkedUpdateDrawingAreaProxy::didReceiveSyncMessage):
        * UIProcess/ChunkedUpdateDrawingAreaProxy.h:
        * UIProcess/DrawingAreaProxy.h:
        (WebKit::DrawingAreaProxy::):
        (WebKit::DrawingAreaProxy::type):
        * UIProcess/LayerBackedDrawingAreaProxy.cpp:
        (WebKit::LayerBackedDrawingAreaProxy::didSetSize):